bin_PROGRAMS = a100 a102 a108 a113
lib_LTLIBRARIES = liba100.la liba102.la liba108.la

a100_SOURCES = a100.c
a100_CFLAGS = $(AM_CFLAGS) -ansi -Wall
liba100_la_SOURCES = a100.c

a102_SOURCES = a102.c
a102_CFLAGS = $(AM_CFLAGS) -ansi -Wall
liba102_la_SOURCES = a102.c

a108_SOURCES = a108.c
a108_CFLAGS = $(AM_CFLAGS) -ansi -Wall
liba108_la_SOURCES = a108.c

a113_SOURCES = a113.c
a113_CFLAGS = -ansi -Wall
