TESTS = check_a100 check_a102 check_a108

check_PROGRAMS = check_a100 check_a102 check_a108

check_a100_SOURCES = check_a100.c
check_a100_CFLAGS = @CHECK_CFLAGS@
check_a100_LDADD = $(top_builddir)/src/liba100.la @CHECK_LIBS@

check_a102_SOURCES = check_a102.c
check_a102_CFLAGS = @CHECK_CFLAGS@
check_a102_LDADD = $(top_builddir)/src/liba102.la @CHECK_LIBS@

check_a108_SOURCES = check_a108.c
check_a108_CFLAGS = @CHECK_CFLAGS@
check_a108_LDADD = $(top_builddir)/src/liba108.la @CHECK_LIBS@
